Fix loader overflow (shaking page)

--- a/src/assets/style/components/_loader.scss
+++ b/src/assets/style/components/_loader.scss
@@ -1,33 +1,48 @@
-.loaderSpinner {
-    font-size: 10px;
-    position: relative;
-    text-indent: -9999em;
-    border: .5rem solid #F5F5F5;
-    border-left: .5rem solid #8c8dfc;
-    transform: translateZ(0);
-    animation: nuxtLoadingCustom 1.1s infinite linear;
-    &.size {
-        &-lg {
-            &, &::after {
-                width: 5rem;
-                height: 5rem;
-            }
-        }
-        &-md {
-            &, &::after {
-                width: 4rem;
-                height: 4rem;
-            }
-        }
-        &-sm {
-            &, &::after {
-                width: 3rem;
-                height: 3rem;
-            }
+
+.loaderContainer {
+  overflow: hidden;
+  &.size {
+    &-lg {
+        &, .loaderSpinner, .loaderSpinner::after {
+            width: 5rem;
+            height: 5rem;
         }
     }
+    &-md {
+        &, .loaderSpinner, .loaderSpinner::after {
+            width: 4rem;
+            height: 4rem;
+        }
+    }
+    &-sm {
+        &, .loaderSpinner, .loaderSpinner::after {
+            width: 3rem;
+            height: 3rem;
+        }
+    }
+    &-xs {
+        &, .loaderSpinner, .loaderSpinner::after {
+            width: 1.2rem;
+            height: 1.2rem;
+        }
+        .loaderSpinner {
+            border-width: .2rem;
+        }
+    }
+  }
+
+  .loaderSpinner {
+    position: relative;
+    font-size: 10px;
+    text-indent: -9999em;
+    border: .5rem solid #F5F5F5;
+    border-left-color: #8c8dfc;
+    transform: translateZ(0);
+    animation: nuxtLoadingCustom 1.1s infinite linear;
+    will-change: transform;
 
     &, &::after {
       border-radius: 50%;
     }
+  }
 }
